mintupdate (3.8.2) helena; urgency=low

  * Code cleanup
  * Performance improvements in Internet connection checks
  * Generic naming

 -- Clement Lefebvre <root@linuxmint.com>  Wed,  22 Jul 2009 12:05:00 +0000

mintupdate (3.8.1) helena; urgency=low

  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-error-handling
  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-blacklist-packages
  * Bug fix: incorrect tooltip in the Preferences window (https://bugs.launchpad.net/bugs/400861)

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  21 Jul 2009 16:21:00 +0000

mintupdate (3.8.0) helena; urgency=low

  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-visible-columns
  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-dimensions

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  21 Jul 2009 12:28:00 +0000

mintupdate (3.7.9) gloria; urgency=low

  * Bug fix: Empty rules file (https://bugs.launchpad.net/bugs/399276)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 14:44:00 +0000

mintupdate (3.7.8) gloria; urgency=low

  * Bug fix: No label under toolbar icons (https://bugs.launchpad.net/bugs/399705)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 12:35:00 +0000

mintupdate (3.7.7) gloria; urgency=low

  * Updated translations
  * Fixed critical bug in Portuguese translation

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  15 Jun 2009 17:00:00 +0000

mintupdate (3.7.6) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  19 May 2009 18:23:00 +0000

mintupdate (3.7.5) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  18 May 2009 19:19:00 +0000

mintupdate (3.7.4) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 19:54:00 +0000
