@@ -7,8 +7,8 @@ Standards-Version: 3.7.2
 
 Package: mintupdate
 Architecture: all
-Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, mintsystem, synaptic
+Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, synaptic
 Conflicts: mintupdate-gnome, mintupdate-kde, mintupdate-xfce
 Replaces: mintupdate-gnome, mintupdate-kde, mintupdate-xfce
-Description: Linux Mint Update Manager
+Description: Update Manager
  Helps installing security updates and new versions of packages. 
