@@ -1,0 +1,24 @@
+*base-files|*|5||Overwrites the Linux Mint LSB info
+*linux-|*|5||May damage your system. In particular, if you have used envy to install nVidia or ATI proprietary drivers, do not install unless you understand how those drivers work.
+*linux-image-2.6.22-14|*|3||
+*linux-headers-2.6.22-14|*|3||
+*linux-restricted-modules-2.6.22-14|*|3||
+linux-libc-dev|2.6.22-14.52|3||
+linux-restricted-modules-common|2.6.22.4-14.10|3||
+*xorg|*|4||	
+hal|*|5||
+*hal-|*|5||
+*libhal|*|5||
+*dbus|*|4||Crucial to Linux components working with one another. Do not install unless you are experiencing a problem which you believe the upgrade will solve
+*libdbus|*|4||Crucial to Linux components working with one another. Do not install unless you are experiencing a problem which you believe the upgrade will solve
+*mint|*|1||
+*firefox|*|2||
+*xulrunner|*|2||
+*language-pack|*|2||
+opera|*|2||
+flashplugin-nonfree|*|2||
+thunderbird|*|2||
+pidgin|*|2||
+nvidia-glx-new|*|4||
+grub-gfxboot|*|4||
+grub|*|5||
