@@ -1,0 +1,13 @@
+#!/usr/bin/python
+
+import apt
+import sys
+
+try:
+	cache = apt.Cache()	
+	pkg = cache["mintupdate"]
+	print pkg.installedVersion
+except:
+	pass
+
+
