@@ -3,6 +3,7 @@ mintupdate (3.8.2) helena; urgency=low
   * Code cleanup
   * Performance improvements in Internet connection checks
   * Generic naming
+  * Removed dependency on mintsystem
 
  -- Clement Lefebvre <root@linuxmint.com>  Wed,  22 Jul 2009 12:05:00 +0000
 
